---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-02-26
  Bugfixes:
    - fix typo in dispatcher that caused crashes when recomputing shipmends because of too many stacks
  Changes:
    - Changed default network value from -1 ("all networks") to 0 ("no networks"). This affects any station
      that has no explicit network id signal connected. Rationale for that change is that before this release,
      turning off a connected combinator (LTN or constant combinator) will activate the station for all
      networks instead of turning it off. If your setup relies on the default signal being "-1", set it
      explicitly in the LTN settings.
    - Add a new setting "Requesters ignore stopped trains" that allows ignoring unloading trains when scheduling
      new requests
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2025-02-25
  Changes:
    - enforce that only items can be put into a merged delivery (Same as #9 by @abrenneke, thanks for the PR!)
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2025-02-23
  Changes:
    - support quality for cargo/fluid wagons (they might have larger inventories).
    - harden the signal processing to only allow item/fluid signals.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025-02-12
  Changes:
    - support item quality for requesters and providers.
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-02-06
  Bugfixes:
    - Fix "unscheduled cargo" messages even if everything is ok. (#3, reported by @Litcube)